# gpr-300-spr2025-jayden-lombardi

./: CMakeLists.txt
assignments/CSM0/: CMakeLists.txt  main.cpp
assignments/CSM0/assets/: blinPhong.frag  blinPhong.vert  shadow_pass.vert
assignments/assignment0/: main.cpp
assignments/assignment0/assets/: lit.frag
assignments/assignment1/: CMakeLists.txt  main.cpp
assignments/assignment1/assets/: Gamma.frag  HDR.frag  HDR.vert  Vignette.frag  blur.frag  chromatic.frag  distort.frag  edge.frag  fullscreen.frag  gaussBlur.frag  grain.frag  grain.vert  grey.frag  grey.vert  inverse.frag  lit.frag  lit.vert  sharpen.frag
assignments/assignment2/: CMakeLists.txt  main.cpp
assignments/assignment2/assets/: blinPhong.frag  lit.frag  lit.vert
assignments/assignment3/: CMakeLists.txt  main.cpp
assignments/assignment3/assets/: default.frag  deferredLit.frag  deferredLit.vert  depth.vert  geo.frag  geoPass.frag  geoPass.vert  lightPass.frag
assignments/homesesh1/: CMakeLists.txt  main.cpp
assignments/homesesh1/assets/: default.frag  default.vert  geo.frag  lightV.vert
assignments/worksesh0/: CMakeLists.txt  main.cpp
assignments/worksesh0/assets/: lit.vert  toon.frag
assignments/worksesh1/: CMakeLists.txt  main.cpp
assignments/worksesh1/assets/: water.frag
assignments/worksesh2/: CMakeLists.txt  main.cpp
assignments/worksesh2/assets/: water.frag  water.vert
assignments/worksesh3/: CMakeLists.txt  main.cpp
assignments/worksesh3/assets/: blinPhong.frag  blinnphong.frag  (+2 more)
assignments/worksesh4/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
(+10 files in other folders)
